syntax = "proto3";

package blog.blog;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "blog/blog/params.proto";

option go_package = "blog/x/blog/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreatePost   (MsgCreatePost  ) returns (MsgCreatePostResponse  );
  rpc UpdatePost   (MsgUpdatePost  ) returns (MsgUpdatePostResponse  );
  rpc DeletePost   (MsgDeletePost  ) returns (MsgDeletePostResponse  );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                   "authority";
  option           (amino.name) = "blog/x/blog/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreatePost {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string title   = 2;
  string body    = 3;
}

message MsgCreatePostResponse {
  uint64 id = 1;
}

message MsgUpdatePost {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string title   = 2;
  string body    = 3;
  uint64 id      = 4;
}

message MsgUpdatePostResponse {}

message MsgDeletePost {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeletePostResponse {}

